[gd_scene load_steps=17 format=2]

[ext_resource path="res://Elementos/Visuais/Fundo/Infa.jpg" type="Texture" id=1]
[ext_resource path="res://Cenas/Objetos/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elementos/Visuais/Personagens/Menino/Menino-2.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Fontes/FonteJokerman.tscn" type="PackedScene" id=4]
[ext_resource path="res://Elementos/Textuais/Jokerman/JOKERMAN.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Cenas/Objetos/BotaoHorizontal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Elementos/Textuais/ComicSansMS/comic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Codigos/Cenas/TelaCadastro.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 100
outline_size = 15
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
bg_color = Color( 0.588235, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
resource_local_to_scene = true
size = 38
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
resource_local_to_scene = true
size = 34
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=8]
length = 40.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fundo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -713, -360 ) ]
}

[node name="TelaCadastro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="TextureRect" parent="."]
self_modulate = Color( 0.760784, 0.972549, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Personagem" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -610.0
margin_right = 465.0
margin_bottom = 110.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" parent="." instance=ExtResource( 4 )]
anchor_right = 1.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.784314, 0.784314, 1 )
text = "Inf√¢ncia Segura"
align = 1

[node name="Centro" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Horizontal" type="HBoxContainer" parent="Centro"]
margin_left = -311.0
margin_top = -52.0
margin_right = 311.0
margin_bottom = 51.0
custom_constants/separation = 10
alignment = 1

[node name="CampoTexto" type="LineEdit" parent="Centro/Horizontal"]
margin_right = 306.0
margin_bottom = 103.0
rect_min_size = Vector2( 306, 103 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.784314, 0.784314, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0.352941, 1 )
max_length = 10
placeholder_text = "RotuloCadastro"

[node name="Jogar" parent="Centro/Horizontal" instance=ExtResource( 6 )]
self_modulate = Color( 0, 0.8, 0.2, 1 )
margin_left = 316.0
margin_right = 622.0
margin_bottom = 103.0

[node name="Icone" parent="Centro/Horizontal/Jogar/Horizontal" index="0"]
visible = false

[node name="Texto" parent="Centro/Horizontal/Jogar/Horizontal" index="1"]
margin_left = 62.0
margin_right = 244.0
custom_fonts/font = SubResource( 4 )
text = "BotaoJogar"

[node name="Dialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoVoz/Vertical" index="1"]
custom_fonts/font = SubResource( 5 )

[node name="Caixa" parent="Dialogo/Margem/Vertical" index="1"]
margin_right = 1260.0

[node name="Texto" parent="Dialogo/Margem/Vertical/Caixa/Margem" index="0"]
margin_right = 1134.0
custom_fonts/normal_font = SubResource( 6 )
CarregarTexto = "TelaCadastro_1"
CarregarVoz = "TelaCadastro_1"

[node name="BotaoComando" parent="Dialogo/Margem/Vertical" index="2"]
visible = false

[node name="Texto" parent="Dialogo/Margem/Vertical/BotaoComando/Vertical" index="1"]
custom_fonts/font = SubResource( 7 )

[node name="AnimarElementos" type="AnimationPlayer" parent="."]
autoplay = "Padrao"
anims/Padrao = SubResource( 8 )

[connection signal="focus_exited" from="Centro/Horizontal/CampoTexto" to="." method="_TextoInserido"]
[connection signal="text_changed" from="Centro/Horizontal/CampoTexto" to="." method="_TextoInicial"]
[connection signal="text_entered" from="Centro/Horizontal/CampoTexto" to="." method="_TextoDigitado"]
[connection signal="pressed" from="Centro/Horizontal/Jogar" to="." method="_trocarCena"]

[editable path="Centro/Horizontal/Jogar"]
[editable path="Dialogo"]
[editable path="Dialogo/Margem/Vertical/BotaoVoz"]
[editable path="Dialogo/Margem/Vertical/BotaoComando"]
